2009-11-12  Thomas Sefzick <thse@users.sourceforge.net>

	* term/canvas.trm:  Fix initialization failure on non-unix platforms.

2009-11-11 Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Updated introduction.

2009-11-06  Allin Cottrell  <cottrell@wfu.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_convert):  Work around a font
	problem in the win32 backend for pango/cairo character rendering.
	Conditional on WIN32 and libpango > 1.21, request rendering by freetype
	rather than win32. Fix suggested by cairo developer Behdad Esfahbod.

2009-11-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/term.c (enhanced_recursion): Replace in-line warnings sent to
	stderr by instead calling int_warn().

2009-11-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/breader.c:  Give df_libgd_get_pixel() a valid return value even
	if it's only a dummy function because there is no png support.

2009-11-01  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.dj2 config/makefile.cyg config/makefile.mgw
	config/makefile.nt config/makefile.os2: Added GNUPLOT_JS_DIR.

	* term/canvas.trm (CANVAS_graphics): Fix // vs \ and / for jsdir and
	Windows.

2009-10-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/show.c (show_version): Fit width of welcome messages into 80
	characters.

2009-10-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.h src/util.h:  Tell gcc that routines bail_to_command_line(),
	int_error(), graph_error(), and os_error() do not return. 
	#ifdef __GNUC__ ...  __attribute__((noreturn));
	This avoids spurious warnings about uninitialized variables from
	call sites like:
	    int foo;
	    if (END_OF_COMMAND || !(foo = try_to_get_string()))
		int_error(c_token,"missing string");
	    baz = foo;

2009-10-30  Juergen Wieferink  <wieferink@freenet.de>

	* src/command.c, src/command.h (do_string, do_string_and_free):
	Use to different functions depending on whether the command string has
	to be freed.  Don't reset screen_ok.
	